[package]
name = "nodeset"
version = "0.4.1"
edition = "2021"
authors = ["Olivier Delhomme <olivier.delhomme@free.fr>"]
description = "NodeSet management library"
repository = "https://gitlab.com/delhomme/nodeset/"
license = "GPL-3.0-or-later"
keywords = ["nodeset", "node", "set", "group", "cluster"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
lazy_static = "1.4.0"
clap = { version = "4.0.29", features = ["derive"] }


[package.metadata.generate-rpm]
name = "ns"
release = 1
assets = [ {source = "target/release/ns", dest = "/usr/bin/ns", mode = "0755"} ]
